<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#59000000"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/app_bg"
        android:orientation="vertical"
        android:padding="@dimen/paddingMediumExtraPlusPlus" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subscription_unlock_content_txt"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeSubscriptionTitle"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginMediumPlusSubscription"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/subscription_promo_code_txt"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeExtrsLargePlusSubscription" />

            <EditText
                android:id="@+id/subscription_popup_promo_code_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:background="@color/white"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingLeft="@dimen/paddingMicro"
                android:textColor="@color/black_gray"
                android:textSize="@dimen/textSizeExtrsLargePlusSubscription" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center" >

                <Button
                    android:id="@+id/subscription_popup_promo_code_apply_btn"
                    android:layout_width="@dimen/subscription_btn_width"
                    android:layout_height="@dimen/subscription_btn_width"
                    android:background="@drawable/button_selector"
                    android:gravity="center"
                    android:text="@string/subscription_promo_code_apply_btn_txt"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeLargeSubscriptionBtn" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginLargeSubscription"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/magicflix_auto_renewable_subscription_msg"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeExtrsLargePlusSubscription" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$4.99"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeExtrsLargePlusSubscription" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginLargeSubscription"
            android:text="@string/subscription_cancel_anytime_txt"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeExtrsLargePlusSubscription"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginMediumPlusSubscription"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="center|left" >

                <Button
                    android:id="@+id/subscription_popup_promo_code_cancel_btn"
                    android:layout_width="@dimen/subscription_btn_width"
                    android:layout_height="@dimen/subscription_btn_width"
                    android:background="@drawable/button_selector"
                    android:gravity="center"
                    android:text="@string/susbscription_popup_cancel_btn"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeLargeSubscriptionBtn" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center" >

                <Button
                    android:id="@+id/subscription_popup_promo_code_buy_btn"
                    android:layout_width="@dimen/subscription_btn_width"
                    android:layout_height="@dimen/subscription_btn_width"
                    android:background="@drawable/button_selector"
                    android:gravity="center"
                    android:text="@string/subscription_popup_buy_btn_txt"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeLargeSubscriptionBuyBtn" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>