<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.magicflix.goog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/familyScreenBg"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/on_board_age_avatar"
        android:layout_width="@dimen/timesPopUpAvatarWidth"
        android:layout_height="@dimen/timesPopUpAvatarHeight"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@drawable/mflix_baoon_on_boarding"
        android:scaleType="fitXY" />

    <com.magicflix.goog.app.views.MagicflixTextView
        android:id="@+id/on_boarding_age_help_tv"
        android:layout_width="@dimen/ageSelectionSeekBarWidth"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/marginMediumExtraPlusPlus"
        android:layout_marginTop="@dimen/marginTopAgeSelection"
        android:layout_toRightOf="@id/on_board_age_avatar"
        android:gravity="center"
        android:text="@string/age_selection_help_txt"
        android:textColor="@color/white"
        android:textSize="@dimen/textSizeExtrsLargePlusPlus"
        app:fontName="avenirnext_medium_lt.otf" />


    <com.magicflix.goog.app.views.MagicflixTextView
        android:id="@+id/on_board_min_age_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/on_boarding_age_help_tv"
        android:layout_marginTop="@dimen/marginLarge"
        android:layout_toRightOf="@id/on_board_age_avatar"
        android:gravity="center|right"
        android:text="@string/min_age_label_txt"
        android:textColor="@color/white"
        android:textSize="@dimen/textSizeExtrsLargePlusPlus"
        app:fontName="avenirnext_medium_lt.otf" />
    
    <com.magicflix.goog.app.views.CustomSeekBar
        android:id="@+id/on_board_age_sb"
        android:layout_width="@dimen/ageSelectionSeekBarWidth"
        android:layout_height="wrap_content"
        android:layout_below="@id/on_boarding_age_help_tv"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/marginLarge"
        android:layout_toRightOf="@id/on_board_min_age_tv"
        android:max="80"
        android:progressDrawable="@drawable/progress" >
    </com.magicflix.goog.app.views.CustomSeekBar>
    
    <com.magicflix.goog.app.views.MagicflixTextView
        android:id="@+id/on_board_max_age_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/on_boarding_age_help_tv"
        android:layout_marginTop="@dimen/marginLarge"
        android:layout_toRightOf="@id/on_board_age_sb"
        android:gravity="center|right"
        android:text="@string/max_age_label_txt"
        android:textColor="@color/white"
        android:textSize="@dimen/textSizeExtrsLargePlusPlus"
        app:fontName="avenirnext_medium_lt.otf" />

    <com.magicflix.goog.app.views.MagicflixTextView
        android:id="@+id/on_board_age_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/on_board_age_sb"
        android:layout_toRightOf="@id/on_board_age_avatar"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:visibility="gone"
        app:fontName="avenirnext_medium_lt.otf" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
         android:layout_gravity="bottom|right"
        android:orientation="horizontal" >

        <com.magicflix.goog.app.views.MagicflixButton
            android:id="@+id/on_board_age_screen_skip_btn"
            android:layout_width="@dimen/age_selection_screen_ok_btn_width"
            android:layout_height="@dimen/age_selection_screen_ok_btn_height"
            android:layout_margin="@dimen/age_selection_screen_ok_btn_layout_margin"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:visibility="gone"
            android:text="SKIP"
            android:textColor="@color/white"
            app:fontName="avenirnext_medium_lt.otf"
            android:textSize="@dimen/textSizeLargeSubscriptionBuyBtn" />

        <com.magicflix.goog.app.views.MagicflixButton
            android:id="@+id/on_board_age_screen_ok_btn"
            android:layout_width="@dimen/age_selection_screen_ok_btn_width"
            android:layout_height="@dimen/age_selection_screen_ok_btn_height"
            android:layout_margin="@dimen/age_selection_screen_ok_btn_layout_margin"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:text="OK"
            android:textColor="@color/white"
            app:fontName="avenirnext_medium_lt.otf"
            android:textSize="@dimen/textSizeLargeSubscriptionBuyBtn" />
    </LinearLayout>

</RelativeLayout>